styles/base.css
:root{
    --main-color: #263d4f;
    --second-color: #fde4d3;
    --accend-color: #de3f27;
}

* {
    list-style-type: none;
}


h1, h2, h3, h4 {
    color: var(--second-color);
    font-family: Montserrat;
}

a {
    text-decoration: none;
    color: var(--second-color);
    font-family: Newsreader;
}

p {
    color: var(--second-color);
    font-family: Newsreader;
}


body {
    display: grid;
    height: 100vh;
    margin: 0;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(7, 1fr);
    gap: 8px;
    background-color: var(--main-color);
}
    
header {
    grid-column: span 5 / span 5;
    background-color: var(--main-color);
    text-align: center;
}

.name {
    color: var(--accend-color);
}

nav {
    display: flex;
    justify-content: space-between;
    padding: 10px;
    border: 1px solid var(--accend-color);
}

nav ul {
    display: flex;
    width: 100%;
    padding: 0;
    margin: 0;
}

nav ul li {
    flex-grow: 1;
}

nav ul li a {
    display: block;
    text-align: center;
    padding: 10px;
}

nav ul li a:hover {
    color: var(--accend-color);
}

main {
    grid-column: span 3 / span 3;
    grid-row: span 5 / span 5;
    grid-row-start: 2;
    background-color: var(--main-color);
    border: 1px solid var(--accend-color);
}

.cards {
    display: flex;
    flex-direction: column;
    width: 100%;
    background-color: var(--main-color);
    border-radius: 8px;
}

.cards h2 {
    text-align: center;
    background-color: var(--accend-color);
}

.about-me {
    display: flex;
    align-items: center;
    gap: 16px;
}

.about-me img {
    width: 150px;
    height: auto;
}

.mexico {
    display: flex;
    align-items: center;
    gap: 16px;
}

.mexico img {
    width: 150px;
    height: auto;
}

aside {
    grid-column: span 2 / span 2;
    grid-row: span 5 / span 5;
    grid-column-start: 4;
    grid-row-start: 2;
    background-color: var(--main-color);
    text-align: center;
    border-radius: 8px;
    border: 1px solid var(--accend-color);
}

aside h2 {
    background-color: var(--accend-color);
}

aside ul {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

aside ul li {
    margin: 16px 0 16px ;
}

aside ul li a {
    color: var(--second-color);
    display: block;
    width: 100%;
    text-align: center;
}

aside ul li a:hover {
    color: var(--accend-color);
}

footer {
    grid-column: span 5 / span 5;
    grid-row-start: 7;
    background-color: var(--accend-color);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

}

.spans {
    display: flex;
    gap: 16px;
    justify-content: center;
    align-items: center;
}

#lastModified {
    display: block;
    text-align: center;
    margin-top: 4px;
}


/* TEST */

@media screen and (max-width: 600px) {
    body {
    background-color: red;

    }
}

